5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1596_1015.log
== TEST (2019-04-02 16:46:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=min(x,y,z())
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.204645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 7, in <module>
    a=min(x,y,z())
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.168007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 7, in <module>
    a=min(x,y,z())
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.173609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 7, in <module>
    a=min(x,y,z())
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- ERROR:
File "XXXX", line 9
    c=(x+z+y)–(a+b)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.140059
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.142123
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- ERROR:
File "XXXX", line 9
    c=(x+z+y)–(a+b)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.132127
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.146098
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.196421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 7, in <module>
    a=min(x,y,z())
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:53:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.194238
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:54:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z())
b=max(x,y,z())
c=(x+z+y)–(a+b)
print(a)
print(c)
print(b)
-- EXECUTION TIME:
0.154867
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 9
    c=(x+z+y)\u2013(a+b)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
